--- a/ui/app/templates/base.jinja2
+++ b/ui/app/templates/base.jinja2
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000">
     <title>refinance</title>
     <link rel="stylesheet" href="/static/style.css">
+    <script src="https://unpkg.com/htmx.org@1.6.1"></script>
 </head>
 
 <body>
