--- a/ui/app/templates/index.jinja2
+++ b/ui/app/templates/index.jinja2
@@ -1,5 +1,6 @@
 {% extends "base.jinja2" %}
 {% block title %}Refinance{% endblock title %}
 {% block content %}
-<p>Welcome to refinance! Wanna make a transaction?</p>
+<p>Welcome to refinance! Wanna <a href="{{ url_for('transaction.add') }}">make a transaction</a>?</p>
+
 {% endblock content %}
