--- a/ui/app/templates/auth/login.jinja2
+++ b/ui/app/templates/auth/login.jinja2
@@ -1,11 +1,11 @@
 {% extends 'base.jinja2' %}
+{% from 'form.jinja2' import render_form %}
 
 {% block title %}Login{% endblock %}
 
 {% block content %}
 <form method="post">
-    <label for="token">Token:</label>
-    <input type="text" id="token" name="token" required>
-    <button type="submit">Login</button>
+    {{ render_form(form) }}
 </form>
+
 {% endblock %}
