--- a/ui/app/templates/base.jinja2
+++ b/ui/app/templates/base.jinja2
@@ -23,7 +23,9 @@
         <ul>
             {% if g.actor_entity %}
             <li><a href="{{ url_for('transaction.list') }}">Transactions</a></li>
+            <li><a href="{{ url_for('split.list') }}">Splits</a></li>
             <li><a href="{{ url_for('entity.list') }}">Entities</a></li>
+
             <li class="user">
                 Welcome, <a href="{{ url_for('entity.detail', id=g.actor_entity.id) }}"><strong>{{ g.actor_entity.name
                         }}</strong></a>! <a href="{{ url_for('auth.logout') }}">Logout</a>
