--- a/ui/app/templates/transaction/list.jinja2
+++ b/ui/app/templates/transaction/list.jinja2
@@ -7,6 +7,13 @@
     <summary>read manual</summary>
     <p>Transaction — is a transfer of money from one Entity to another Entity.</p>
     <p>Transaction can be created by anyone, from anyone to anyone.</p>
+    <h3>Flow input/output</h3>
+    <p>Complete flow should have both <b>input</b> and <b>output</b> entities at both ends. </p>
+    <p><i>bank_in → resident_name → hackerspace → rent → cash_out</i>.</p>
+    <p>As you see, a complete transfer includes 1 <i>in</i> and 1 <i>out</i> entities,
+        indicating where money have entered the system and where they left it.
+    </p>
+    <h3>Transaction status</h3>
     <p>Transaction can be Confirmed or Non-Confirmed if you decide that you want to create a draft one / wait for a
         confirmation from other party. Non-Confirmed Transactions are like written cheques. Don't use them too
         frequently.</p>
