--- a/ui/app/templates/transaction/macro_list.jinja2
+++ b/ui/app/templates/transaction/macro_list.jinja2
@@ -1,3 +1,5 @@
+{% from 'widgets/tag_inline.jinja2' import tag_inline %}s
+
 {% macro transaction_list(transactions) %}
 {% if transactions %}
 <div class="wide-table-wrapper">
@@ -8,7 +10,9 @@
                 <td>Actor</td>
                 <td>Date</td>
                 <td>From</td>
+                <td></td>
                 <td>To</td>
+                <td></td>
                 <td>Amount</td>
                 <td>Currency</td>
                 <td>Comment</td>
@@ -26,10 +30,23 @@
             <td>
                 <a
                     href="{{ url_for('entity.detail', id=transaction.from_entity_id) }}">{{transaction.from_entity.name}}</a>
+
             </td>
+            <td>
+                {% for tag in transaction.from_entity.tags %}
+                {{ tag_inline(tag) }}
+                {% endfor %}
+            </td>
+
             <td>
                 <a href="{{ url_for('entity.detail', id=transaction.to_entity_id) }}">{{transaction.to_entity.name}}</a>
             </td>
+            <td>
+                {% for tag in transaction.to_entity.tags %}
+                {{ tag_inline(tag) }}
+                {% endfor %}
+            </td>
+
             <td class="right-align">{{ transaction.amount }}</td>
             <td>{{ transaction.currency | upper }}</td>
             <td>{{ transaction.comment or '' }}</td>
