--- a/ui/app/templates/widgets/tag_inline.jinja2
+++ b/ui/app/templates/widgets/tag_inline.jinja2
@@ -2,9 +2,7 @@
 {%- set hue = (tag.id * 41.9) % 360 -%}
 {%- set color = "hsl(" + hue|string + ", 50%, 50%)" -%}
 
-<small>
-    <div class="tag-badge" style="border-color: {{ color }}">
-        <a style="color: {{ color }}" href="{{ url_for('tag.detail', id=tag.id )}}">{{ tag.name }}</a>
-    </div>
+<small class="tag-badge" style="border-color: {{ color }}">
+    <a style="color: {{ color }}" href="{{ url_for('tag.detail', id=tag.id )}}">{{ tag.name }}</a>
 </small>
 {% endmacro %}
