add currency exchange ui

--- a/ui/app/templates/form.jinja2
+++ b/ui/app/templates/form.jinja2
@@ -4,12 +4,12 @@
     {% for field in form %}
     {% if field.name not in except %}
     <tr>
-        {% if field.type not in ('CSRFTokenField', 'SubmitField') %}
+        {% if field.type not in ('CSRFTokenField', 'SubmitField') and field.widget.__class__.__name__ != 'HiddenInput'%}
         <td>{{ field.label() }}</td>
         {% endif %}
         <td>
             {% if field.data is not none %}
-            {{ field(autocomplete="off", value=field.data) }}
+            {{ field(autocomplete="off", value=field.data or field.label.text) }}
             {% else %}
             {{ field(autocomplete="off") }}
             {% endif %}
