--- a/ui/app/templates/entity/edit.jinja2
+++ b/ui/app/templates/entity/edit.jinja2
@@ -1,5 +1,6 @@
 {% extends 'base.jinja2' %}
 {% from 'form.jinja2' import render_form %}
+{% import 'widgets/tag_manager.jinja2' as tag_manager %}
 
 {% block title %}Edit entity {{ entity.id }} {{ entity.name }}{% endblock %}
 
@@ -10,4 +11,6 @@
     <h2>Auth</h2>
     {{ render_form(auth_form) }}
 </form>
+<h2>Tags</h2>
+{{ tag_manager.tag_manager("entity", entity.id, entity.tags, all_tags) }}
 {% endblock %}
