--- a/ui/app/templates/form.jinja2
+++ b/ui/app/templates/form.jinja2
@@ -9,10 +9,10 @@
         {% endif %}
         <td>
             {% if field.data is not none %}
-            {{ field(autocomplete="off", value=field.data or (field.label.text if field.type == 'SubmitField' else ''))
+            {{ field(value=field.data or (field.label.text if field.type == 'SubmitField' else ''))
             }}
             {% else %}
-            {{ field(autocomplete="off") }}
+            {{ field() }}
             {% endif %}
         </td>
     </tr>
