--- a/ui/app/templates/transaction/complete.jinja2
+++ b/ui/app/templates/transaction/complete.jinja2
@@ -1,7 +1,7 @@
 {% extends 'base.jinja2' %}
 {% from 'form.jinja2' import render_form %}
 
-{% block title %}Confirm transaction {{ transaction.id }}?{% endblock %}
+{% block title %}Complete transaction {{ transaction.id }}?{% endblock %}
 
 {% block content %}
 <form method="post">
