--- a/ui/app/templates/transaction/list.jinja2
+++ b/ui/app/templates/transaction/list.jinja2
@@ -14,8 +14,8 @@
         indicating where money have entered the system and where they left it.
     </p>
     <h3>Transaction status</h3>
-    <p>Transaction can be Confirmed or Non-Confirmed if you decide that you want to create a draft one / wait for a
-        confirmation from other party. Non-Confirmed Transactions are like written cheques. Don't use them too
+    <p>Transaction can be Completed or Created if you decide that you want to create a draft one / wait for a
+        confirmation from other party. Created Transactions are like written cheques. Don't use them too
         frequently.</p>
 </details>
 
