--- a/ui/app/templates/transaction/detail.jinja2
+++ b/ui/app/templates/transaction/detail.jinja2
@@ -32,8 +32,8 @@
         <td>{{ transaction.comment or '' }}</a></td>
     </tr>
     <tr>
-        <td>Confirmed</td>
-        <td>{{ transaction.confirmed }}</a></td>
+        <td>Status</td>
+        <td>{{ transaction.status }}</a></td>
     </tr>
     <tr>
         <td>Created at</td>
@@ -44,8 +44,8 @@
         <td>{{ transaction.modified_at }}</a></td>
     </tr>
 </table>
-{% if not transaction.confirmed %}
-<p><a href="{{ url_for('transaction.confirm', id=transaction.id) }}">Confirm</a></p>
+{% if transaction.status != "completed" %}
+<p><a href="{{ url_for('transaction.complete', id=transaction.id) }}">Complete</a></p>
 <p><a href="{{ url_for('transaction.edit', id=transaction.id) }}">Edit</a></p>
 <p><a href="{{ url_for('transaction.delete', id=transaction.id) }}">Delete</a></p>
 {% endif %}
