add pagination to all pages

--- a/ui/app/templates/entity/list.jinja2
+++ b/ui/app/templates/entity/list.jinja2
@@ -1,5 +1,6 @@
 {% extends "base.jinja2" %}
 {% from 'widgets/tag_inline.jinja2' import tag_inline %}
+{% from 'widgets/pagination.jinja2' import pagination_control %}
 
 {% block title %}Entities{% endblock %}
 {% block content %}
@@ -36,4 +37,5 @@
 {% else %}
 <p>No entities.</p>
 {% endif %}
+{{ pagination_control(page, total, limit, 'entity.list') }}
 {% endblock %}
